pycaf2/test/resources/linux/PC-77/iptables.txt
# Generated by iptables-save v1.4.21 on Fri Feb 10 13:59:18 2017
*nat
:PREROUTING ACCEPT [9658:1504906]
:INPUT ACCEPT [9071:1382544]
:OUTPUT ACCEPT [1286753:77382068]
:POSTROUTING ACCEPT [1286750:77381936]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Fri Feb 10 13:59:18 2017
# Generated by iptables-save v1.4.21 on Fri Feb 10 13:59:18 2017
*filter
:INPUT ACCEPT [2615783:143105754]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2575411:138532947]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Fri Feb 10 13:59:18 2017
